Fix node-resources test